--- a/src/tesla_ce_supervisor/apps/web/templates/step3.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/step3.html
@@ -75,6 +75,8 @@
             </table>
         </div>
         <div class="step">
+            <button class="btn btn-secondary">Download Vault Configuration</button>
+            <button class="btn btn-secondary">Setup Vault</button>
             <button class="btn btn-secondary">Download core files</button>
             <button class="btn btn-primary">Autodeploy core now</button>
         </div>
