--- a/src/tesla_ce_supervisor/apps/web/templates/base.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/base.html
@@ -7,7 +7,9 @@
 
     <link href="{% static 'web/bootstrap-5.1.3-dist/css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'web/custom.css' %}" rel="stylesheet" />
+    {% block extra_css %}{% endblock %}
     <title>TeSLA CE - Supervisor</title>
+    {% block extra_head_scripts %}{% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,14 +29,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Monitoring</a>
                 </li>
-
             </ul>
         </div>
     </div>
 </nav>
 {% block content %}{% endblock %}
 
-<script src="{% static 'web/jquery-3.2.1.slim/jquery-3.2.1.slim.min.js' %}"></script>
+<script src="{% static 'web/jquery-3.6.0/jquery-3.6.0.min.js' %}"></script>
 <script src="{% static 'web/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js' %}"></script>
 
 {% block js %}{% endblock %}
