--- a/src/tesla_ce_supervisor/apps/web/templates/home.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/home.html
@@ -47,7 +47,7 @@
                     <div id="dep_env_nomad_consul" class="card h-100 deployment_env">
                         <div class="card-body row">
                             <div class="col-md-4 align-content-center">
-                                <img src="{% static 'img/nomad-2-logo-png-transparent.png' %}" class="img-fluid rounded-start" alt="Nomad logo">
+                                <img src="{% static 'img/NomadConsul.png' %}" class="img-fluid rounded-start" alt="Nomad logo">
                             </div>
                             <div class="col-md-8">
                                 <h5 class="card-title">Nomad and Consul</h5>
