--- a/src/tesla_ce_supervisor/apps/web/templates/load_balancer.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/load_balancer.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 {% load widget_tweaks %}
+{% load web_filters %}
 {% block extra_css %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" />
 <style>
     .logo {
         max-width: 200px;
@@ -49,7 +50,22 @@
                                         Must also be registered and pointing to a public IP address of the target deployment server.
                                     </p>
                                 {% endif %}
-
+                                <table class="table table-stripped">
+                                    <thead>
+                                        <th>Domain</th>
+                                        <th>IP</th>
+                                        <th>Status</th>
+                                    </thead>
+                                    <tbody>
+                                        {% include "items/dns_status_row.html" with hostname=options.base_domain %}
+                                    {% if options.mode == 'development' %}
+                                        {% include "items/dns_status_row.html" with hostname='vault.'|add:options.base_domain %}
+                                        {% include "items/dns_status_row.html" with hostname='storage.'|add:options.base_domain %}
+                                        {% include "items/dns_status_row.html" with hostname='rabbitmq.'|add:options.base_domain %}
+                                    {% endif %}
+                                    </tbody>
+                                </table>
+                                {% include "items/service_deployment_table.html" with services="traefik"|split:";" %}
                             </div>
                         </div>
                     </div>
@@ -62,12 +78,67 @@
     </div>
 {% endblock %}
 {% block js %}
-{% csrf_token %}
+    {% csrf_token %}
+    <script src="{% static 'js/service_deployment_table.js' %}"></script>
+
 <script>
     // CSRF value
     const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+    let dns_status_ok = false;
+
+    // Check DNS status
+    function check_dns(callback) {
+        $.get('{% url 'setup_api_check_dns' %}', function(data) {
+            let allok = true;
+            for (const hostname of Object.keys(data)) {
+                if (data[hostname]['ip']) {
+                    $('span.domain-check-ip[data-domain="' + hostname + '"]').html(
+                        data[hostname]['ip']
+                    )
+                    $('span.domain-check-status[data-domain="' + hostname + '"]').html(
+                        'OK'
+                    )
+                } else {
+                    allok = false;
+                    $('span.domain-check-ip[data-domain="' + hostname + '"]').html(
+                        '-'
+                    )
+                    $('span.domain-check-status[data-domain="' + hostname + '"]').html(
+                        'Error'
+                    )
+                }
+            }
+            dns_status_ok = allok;
+            if (callback) {
+                callback({ status: allok, detail: data});
+            }
+        });
+    }
+
+    // Check Load Balancer status
+    function check_lb(callback) {
+        $.get('{% url 'setup_api_check_lb' %}', function(data) {
+
+        });
+    }
+
+    // Check deployment status and manage UI according
+    function check_status() {
+        check_dns(function(data) {
+            if (data['status']) {
+                // Enable deployment actions
+            } else {
+                // Disable deployment actions
+            }
+            check_lb(function(data) {
+
+            });
+        })
+    }
 
     $(function() {
+        // Check the status
+        check_status();
         $(".action-btn").click(function (env) {
            const action = this.dataset['action'];
            let data = $('form').serializeArray();
