Implemented actions for service deployment table

--- a/src/tesla_ce_supervisor/apps/web/templates/items/service_deployment_table.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/items/service_deployment_table.html
@@ -1,10 +1,42 @@
+{% load static %}
+<link href="{% static 'prism/prism.css' %}" rel="stylesheet" />
+<!-- Service Information Download Modal -->
+<div class="modal fade" id="service_modal_dialog" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>To manually deploy the service, download the deployment scripts and follow provided instructions.</p>
+                <div class="text-center">
+                    <a id="service_modal_dialog_file" href="" role="button" class="btn btn-secondary" aria-label="Download Scripts">Download Scripts</a>
+                </div>
+                <div class="m-4" id="service_modal_commands">
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 <table class="table table-stripped">
     <thead>
         <th>Service</th>
         <th>Jobs</th>
         <th>Instances</th>
         <th>Status</th>
-        <th></th>
+        <th class="global-actions-bloc text-right">
+            <button type="button" class="btn btn-sm btn-light global-action" data-action="refresh_all">
+                <i class="bi bi-arrow-repeat"></i>
+            </button>
+            <button type="button" class="btn btn-sm btn-light global-action" data-action="remove_all">
+                <i class="bi bi-trash2-fill"></i>
+            </button>
+            <button type="button" class="btn btn-sm btn-light global-action" data-action="deploy_all">
+                <i class="bi bi-stars"></i>
+            </button>
+
+        </th>
     </thead>
     <tbody>
         {% for service in services %}
@@ -35,3 +67,5 @@
 <span class="m-2"><i class="bi bi-cloud-download"></i> Download scripts</span>
 <span class="m-2"><i class="bi bi-trash2-fill"></i> Remove service</span>
 <span class="m-2"><i class="bi bi-stars"></i> Automatic deployment</span>
+
+<script src="{% static 'prism/prism.js' %}"></script>
