--- a/src/tesla_ce_supervisor/apps/web/templates/load_balancer.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/load_balancer.html
@@ -65,7 +65,7 @@
                                     {% endif %}
                                     </tbody>
                                 </table>
-                                {% include "items/service_deployment_table.html" with services="traefik"|split:";" %}
+                                {% include "items/service_deployment_table.html" with services="lb"|split:";" %}
                             </div>
                         </div>
                     </div>
