--- a/src/tesla_ce_supervisor/apps/web/templates/base.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="{% static 'web/bootstrap-5.1.3-dist/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'prism/prism.css' %}" rel="stylesheet" />
     <link href="{% static 'web/custom.css' %}" rel="stylesheet" />
     {% block extra_css %}{% endblock %}
     <title>TeSLA CE - Supervisor</title>
@@ -37,7 +38,7 @@
 
 <script src="{% static 'web/jquery-3.6.0/jquery-3.6.0.min.js' %}"></script>
 <script src="{% static 'web/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js' %}"></script>
-
+<script src="{% static 'prism/prism.js' %}"></script>
 {% block js %}{% endblock %}
 </body>
 </html>
