--- a/src/tesla_ce_supervisor/apps/web/templates/load_balancer.html
+++ b/src/tesla_ce_supervisor/apps/web/templates/load_balancer.html
@@ -96,15 +96,15 @@
                         data[hostname]['ip']
                     )
                     $('span.domain-check-status[data-domain="' + hostname + '"]').html(
-                        'OK'
+                        '<i class="bi bi-check-circle text-success"></i>'
                     )
                 } else {
                     allok = false;
                     $('span.domain-check-ip[data-domain="' + hostname + '"]').html(
-                        '-'
+                        '<i class="bi bi-question-circle text-muted"></i>'
                     )
                     $('span.domain-check-status[data-domain="' + hostname + '"]').html(
-                        'Error'
+                        '<i class="bi bi-x-circle text-danger"></i>'
                     )
                 }
             }
